fix pie chart labels wrapping
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@35619 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_charts.scss
+++ b/src/main/resources/scss/_charts.scss
@@ -30,6 +30,7 @@
 			width: 50%;
 			display: inline-block;
 			line-height: 2;
+			white-space: nowrap;
 			&[data-value]::before {
 				content: attr(data-value) "% - ";
 			}
